Prevent collapsed placeholder element while image size is fetched
To prevent the dynamically sized image element from collapsing, this
displays the element at the parent's full width until we know the aspect
ratio of the image.

--- a/packages/components/src/focal-point-picker/style.scss
+++ b/packages/components/src/focal-point-picker/style.scss
@@ -13,6 +13,10 @@
 	max-height: 200px;
 }
 
+.imagePlaceholder {
+	min-width: 100%;
+}
+
 .focalPointGroup {
 	left: 0;
 	position: absolute;
